Revert "Fix text wrapping issue"
This reverts commit 9b86378c77506a9b70092a9c99c6f4f8692ca816.

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -198,11 +198,3 @@ code {
     background-size: 30%;
   }
 }
-
-.task-content {
-  .el-status {
-    position: absolute;
-    left: 0;
-    top: -2px;
-  }
-}
